# CPD-UFRGS-2021-1

./: README.md  main  teste.cpp
Dna-Sorting/: input.txt  main.py  teste  teste.py
Lab1_ShellSort/Dna-Sorting/: teste.cpp
Lab1_ShellSort/cplusplus/Exercicio2/: CMakeLists.txt  Makefile
Lab1_ShellSort/cplusplus/Exercicio2/include/: header.hpp
Lab1_ShellSort/cplusplus/Exercicio2/src/: read_input_file.cpp  sorting.cpp
Lab2_QuickSort/Lab2_IagoTonello_318962/: UnsortedArray.cpp  auxiliaryFunctions.cpp  header.h  main  main.cpp
Lab2_QuickSort/cpp/: auxiliaryFunctions.cpp  header.h  main  main.cpp  quickSort.cpp  teste.txt
Lab3_RadixSort/: RadixSort.cpp  header.h  integrantes.txt  main  main.cpp
Lab3_RadixSort/testesLeitura/: main  main.cpp
Lab4_HashTables/: Hashing.py  Lab4_IagoTonello.rar  a.txt  consultas.txt  main.py  nomes_10000.txt  readme.txt
Lab4_HashTables/__MACOSX/: ._consultas.txt  ._nomes_10000.txt
Lab4_HashTables/saidas/: experimento2503.txt  experimento5003.txt  experimento503.txt  experimento7507.txt
cplusplus/: CMakeCache.txt  Makefile  cmake_install.cmake  main
cplusplus/Exercicio1/: CMakeCache.txt  cmake_install.cmake  main
cplusplus/Exercicio2/: CMakeCache.txt  cmake_install.cmake  main
cplusplus/entradas/: entrada1.txt
cplusplus/include/: header.hpp
cplusplus/src/: calculate_sequence.cpp  main.cpp  process.cpp  read_input_file.cpp
nodeAlura/: index.js  package-lock.json  package.json
nodeAlura/config/: customExpress.js
nodeAlura/controllers/: atendimentos.js
python/Lab1-Python/: file.txt
(+19 files in other folders)
